--- a/site-political/index.html
+++ b/site-political/index.html
@@ -253,7 +253,7 @@
                 <span class="menu-item-label">FAQ</span>
             </a>
             <div class="menu-divider"></div>
-            <a href="/playground.html" class="menu-item" role="menuitem">
+            <a href="/playground.html?from=political" class="menu-item" role="menuitem">
                 <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                     <polygon
