Add world items (water bowl, food, ball) and interactive behaviors — Foxy now drinks, eats, and chases the ball

--- a/playground.html
+++ b/playground.html
@@ -55,6 +55,17 @@
     <div class="forest-layer" id="forestLayer"></div>
     <div class="ground-fade"></div>
 
+    <!-- World items Foxy can interact with -->
+    <div class="foxy-item water-bowl" id="itemWater" data-type="water" data-label="water bowl">
+        <div class="item-sprite water-sprite"></div>
+    </div>
+    <div class="foxy-item food-dish" id="itemFood" data-type="food" data-label="cherry snack">
+        <img class="item-sprite" src="assets/sunny-land/items/cherry-1.png" alt="cherry">
+    </div>
+    <div class="foxy-item toy-ball" id="itemBall" data-type="ball" data-label="tennis ball">
+        <div class="item-sprite ball-sprite"></div>
+    </div>
+
     <!-- Main content -->
     <div class="coming-soon">
         <div class="label" id="labelEl">Playground</div>
