Add visible labels (WATER, SNACK, BALL) with gentle pulse to world items

--- a/playground.html
+++ b/playground.html
@@ -58,12 +58,15 @@
     <!-- World items Foxy can interact with -->
     <div class="foxy-item water-bowl" id="itemWater" data-type="water" data-label="water bowl">
         <div class="item-sprite water-sprite"></div>
+        <span class="item-label">water</span>
     </div>
     <div class="foxy-item food-dish" id="itemFood" data-type="food" data-label="cherry snack">
         <img class="item-sprite" src="assets/sunny-land/items/cherry-1.png" alt="cherry">
+        <span class="item-label">snack</span>
     </div>
     <div class="foxy-item toy-ball" id="itemBall" data-type="ball" data-label="tennis ball">
         <div class="item-sprite ball-sprite"></div>
+        <span class="item-label">ball</span>
     </div>
 
     <!-- Main content -->
