Secure Gemini API key: move to gitignored config file, remove hardcoded key

--- a/playground.html
+++ b/playground.html
@@ -120,6 +120,7 @@
     <script src="foxy-soul.js"></script>
     <script src="foxy-body.js"></script>
     <script src="foxy-world.js"></script>
+    <script src="foxy-config.js"></script>
     <script src="foxy-brain.js"></script>
     <!-- YouTube IFrame API -->
     <script src="https://www.youtube.com/iframe_api"></script>
