🦊 Foxy visual overhaul: particles, bounce, position fix, faster cycles
- New foxy-vfx.js: particle engine for eat crumbs, drink splash, ball kick impact, dust clouds
- Ball bounce: proper arc animation with squash/stretch instead of flat slide
- Item reactions: food jiggles when eaten, water ripples when drunk (CSS animations)
- Raised default position from bottom to center of screen (55% height)
- Removed chill mode skip, sped up decision timer (5-10s vs 12-25s)
- Added zoomies behavior: burst-of-energy fast runs with dust particles
- Shortened all behavior durations ~50% for snappier feel
- Post-eat thirst drain + post-drink hunger drain forces item cycling

--- a/playground.html
+++ b/playground.html
@@ -80,6 +80,9 @@
     <!-- Foxy canvas -->
     <canvas id="foxyCanvas"></canvas>
 
+    <!-- VFX particle canvas -->
+    <canvas id="vfxCanvas"></canvas>
+
     <!-- Thought bubble -->
     <div id="thoughtBubble" class="thought-bubble">
         <div class="thought-text" id="thoughtText"></div>
@@ -120,6 +123,7 @@
     <script src="foxy-soul.js"></script>
     <script src="foxy-body.js"></script>
     <script src="foxy-world.js"></script>
+    <script src="foxy-vfx.js"></script>
     <script src="foxy-config.js"></script>
     <script src="foxy-brain.js"></script>
     <!-- YouTube IFrame API -->
