refactor: break foxy-brain.js into 5 focused modules
Extracted from the 2,199-line monolith:
- foxy-behaviors.js (793 lines) — 40+ behavior definitions
- foxy-ball.js (233 lines) — ball drag-to-throw physics
- foxy-chat.js (200 lines) — chat system + command detection
- foxy-input.js (157 lines) — keyboard, mouse, button controls
- foxy-brain.js (894 lines) — AI decisions, Gemini, UI only

Fixed ball chase bug: added playerTakeover() calls so AI
doesn't override Foxy mid-chase.

Updated playground.html and world4.html with correct load order.

--- a/playground.html
+++ b/playground.html
@@ -125,7 +125,11 @@
     <script src="foxy-world.js"></script>
     <script src="foxy-vfx.js"></script>
     <script src="foxy-config.js"></script>
+    <script src="foxy-behaviors.js"></script>
     <script src="foxy-brain.js"></script>
+    <script src="foxy-chat.js"></script>
+    <script src="foxy-ball.js"></script>
+    <script src="foxy-input.js"></script>
     <!-- YouTube IFrame API -->
     <script src="https://www.youtube.com/iframe_api"></script>
 
