--- a/world4.html
+++ b/world4.html
@@ -93,7 +93,12 @@
     <script src="foxy-soul.js"></script>
     <script src="foxy-body.js"></script>
     <script src="foxy-world.js"></script>
+    <script src="foxy-config.js"></script>
+    <script src="foxy-behaviors.js"></script>
     <script src="foxy-brain.js"></script>
+    <script src="foxy-chat.js"></script>
+    <script src="foxy-ball.js"></script>
+    <script src="foxy-input.js"></script>
 
 </body>
 
