--- a/site-political/index.html
+++ b/site-political/index.html
@@ -268,7 +268,7 @@
          HERO — Video background + massive type
          ═══════════════════════════════════════════ -->
     <section class="hero" id="hero">
-        <video class="hero-video" src="../Videos/StatQuickLoop.mp4" muted loop playsinline autoplay
+        <video class="hero-video" src="../Videos/REELMAIN%20LOOP.mp4" muted loop playsinline autoplay preload="auto"
             poster="../Videos/Reel_Poster.jpg"></video>
         <div>
             <div class="hero-name reveal">
