Remove incorrect Danny Trejo bio reference — keep Danny Was Here project card

--- a/site-political/index.html
+++ b/site-political/index.html
@@ -706,7 +706,7 @@
                         I'm a <strong>creative director, editor, and producer</strong> based in Grand Rapids, Michigan.
                         For the last fifteen years I've been making things that move people — across entertainment,
                         corporate, government, and political projects. From New Balance campaigns and NASA ceremonies
-                        to rapid-response political ads and Danny Trejo's TV show, I bring the same energy to every cut.
+                        to rapid-response political ads and branded content, I bring the same energy to every cut.
                     </p>
                     <p class="about-text reveal" data-word-reveal>
                         I edit. I animate. I build apps. I code.
